简历编辑功能

--- a/src/style.css
+++ b/src/style.css
@@ -106,3 +106,9 @@ button {
     text-align: center;
     box-sizing: border-box;
 }
+
+.line-clamp1 {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
