添加分类搜索、退出按钮

--- a/src/style.css
+++ b/src/style.css
@@ -99,6 +99,59 @@ button {
     color: #f56c6c;
 }
 
+.el-message-box {
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    overflow: hidden;
+}
+
+.el-message-box__header {
+    background: linear-gradient(135deg, #00bebd, #adefef);
+    text-align: center;
+}
+
+.el-message-box__btns button {
+    margin: 0 5px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    background-color: #00bebd;
+    border-radius: 8px;
+    padding: 10px 20px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+
+    &.el-button--primary {
+        background-color: #c10808;
+    }
+}
+
+.el-message-box__btns button:hover {
+    background-color: #666;
+    color: #fff;
+    transform: translateY(-2px);
+}
+
+.el-message-box__headerbtn {
+    color: #fff;
+    transition: color 0.3s ease;
+}
+
+.el-message-box__headerbtn:hover {
+    color: #a9b2c3;
+}
+
+.el-message-box__message {
+    padding: 20px;
+    color: #333;
+    font-size: 16px;
+    line-height: 1.5;
+    word-break: break-word;
+}
+
+.el-message-box__container {
+    border-radius: 12px;
+}
+
 #app {
     height: 100vh;
     min-width: 100%;
